examples/lexer/ok/15_signals.sg
// Тест сигналов (реактивных привязок)
fn test_signals() -> int {
    let prices: int[] = [10, 20, 30];
    signal total:int := sum(prices);
    signal average:int := total / 3;
    signal doubled:int := total * 2;
    return total;
}

fn sum(arr: int[]) -> int {
    let result:int = 0;
    for (let i:int = 0; i < arr.length; i = i + 1) {
        result = result + arr[i];
    }
    return result;
}
